--- a/src/style.css
+++ b/src/style.css
@@ -1,36 +1,118 @@
 body{
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
-    width: 100vh;
+    height: 100%;
+    width: 100%;
     margin: auto;
+    
 }
 
-#carouselContainer{
-    /* background-color: blue; */
-    height: 250px;
-    width: auto;
-    color: rgb(114, 114, 114);
+#container{
+    height: 350px;
+    width: 200px;
+    margin-left: 880px;
     margin: auto;
     margin-top: 50px;
     display: flex;
     flex-direction: row;
+    position: relative;
+    overflow: hidden !important;
+    /* outline: solid 1px black;  */
 }
 
-#frame{
-    height: 30em;
-    width: 20em;
-    /* background-color: blue; */
+.book{
+    position: absolute;
+    transition: left .5s;
+  }
+
+
+  img{
+    height: 350px;
+    width: 200px;
+  }
+  
+  #book1{
+    left: 0px;
+  }
+  
+  #book2{
+    left: 200px;
+  }
+  
+  #book3{
+    left: 400px;
+  }
+
+  #book4{
+    left: 600px;
+  }
+  
+  #book5{
+    left: 800px;
+  }
+
+  #book6{
+    left: 1000px;
+  }
+
+
+
+
+
+#dotContainer{
+    margin-top: 30px !important;
+    height: 60px;
+    width: fit-content;
     margin: auto;
+    display: flex;
+    flex-direction: row;
 }
 
+.navDot{
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: rgb(212, 212, 212);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.navDotSelected{
+    height: 25px;
+    width: 25px;
+    margin-top: -5px;
+    border-radius: 50%;
+    background-color: rgb(212, 212, 212);
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/* .frame{
+    height: 500px;
+    width: 350px;
+    background-color: blue;
+    margin: auto;
+} */
+
+  
+
+#arrowContainer{
+    margin-top: 20px;
+    width: 200px;
+    height:50px;
+    margin: auto;
+    display: flex;
+    justify-content: end;
+    color: rgb(212, 212, 212);
+}
 
 .arrow{
-    margin-top: 150px;
+    /* margin-top: 150px; */
     scale: 200%;
-    margin-left: 55px;
-    margin-right: 55px;
+    /* margin-left: 10px;
+    margin-right: 10px; */
     /* height: 50px;
     width: 50px; */
     margin: auto;
+    z-index: 1;
 }
