--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,11 @@
 body{
+    background: url('./wheel.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
     width: 100%;
     margin: auto;
+    
     
 }
 
